reference/pve-freq-v0.2.0-gold/LAUNCH-PACKAGE/infrastructure/dc01-overhaul/staging/S034-20260220/vm102/iptables.txt
Chain INPUT (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         

Chain FORWARD (policy DROP 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         
14184   15M DOCKER-USER  all  --  *      *       0.0.0.0/0            0.0.0.0/0           
14184   15M DOCKER-FORWARD  all  --  *      *       0.0.0.0/0            0.0.0.0/0           

Chain OUTPUT (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         

Chain DOCKER (3 references)
 pkts bytes target     prot opt in     out     source               destination         
    1    60 ACCEPT     tcp  --  !br-5b2e0a919563 br-5b2e0a919563  0.0.0.0/0            172.19.0.8           tcp dpt:7171
    1    60 ACCEPT     tcp  --  !br-5b2e0a919563 br-5b2e0a919563  0.0.0.0/0            172.19.0.7           tcp dpt:5055
    1    60 ACCEPT     tcp  --  !br-5b2e0a919563 br-5b2e0a919563  0.0.0.0/0            172.19.0.6           tcp dpt:8989
    1    60 ACCEPT     tcp  --  !br-5b2e0a919563 br-5b2e0a919563  0.0.0.0/0            172.19.0.5           tcp dpt:7878
    1    60 ACCEPT     tcp  --  !br-5b2e0a919563 br-5b2e0a919563  0.0.0.0/0            172.19.0.4           tcp dpt:9705
    2   120 ACCEPT     tcp  --  !br-5b2e0a919563 br-5b2e0a919563  0.0.0.0/0            172.19.0.3           tcp dpt:9696
    1    60 ACCEPT     tcp  --  !br-5b2e0a919563 br-5b2e0a919563  0.0.0.0/0            172.19.0.2           tcp dpt:6767
    0     0 DROP       all  --  !br-667a4e7aaba4 br-667a4e7aaba4  0.0.0.0/0            0.0.0.0/0           
    0     0 DROP       all  --  !docker0 docker0  0.0.0.0/0            0.0.0.0/0           
    0     0 DROP       all  --  !br-5b2e0a919563 br-5b2e0a919563  0.0.0.0/0            0.0.0.0/0           

Chain DOCKER-BRIDGE (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 DOCKER     all  --  *      br-667a4e7aaba4  0.0.0.0/0            0.0.0.0/0           
    0     0 DOCKER     all  --  *      docker0  0.0.0.0/0            0.0.0.0/0           
    8   480 DOCKER     all  --  *      br-5b2e0a919563  0.0.0.0/0            0.0.0.0/0           

Chain DOCKER-CT (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 ACCEPT     all  --  *      br-667a4e7aaba4  0.0.0.0/0            0.0.0.0/0            ctstate RELATED,ESTABLISHED
    0     0 ACCEPT     all  --  *      docker0  0.0.0.0/0            0.0.0.0/0            ctstate RELATED,ESTABLISHED
 6473   12M ACCEPT     all  --  *      br-5b2e0a919563  0.0.0.0/0            0.0.0.0/0            ctstate RELATED,ESTABLISHED

Chain DOCKER-FORWARD (1 references)
 pkts bytes target     prot opt in     out     source               destination         
14184   15M DOCKER-CT  all  --  *      *       0.0.0.0/0            0.0.0.0/0           
 7088 1556K DOCKER-INTERNAL  all  --  *      *       0.0.0.0/0            0.0.0.0/0           
 7088 1556K DOCKER-BRIDGE  all  --  *      *       0.0.0.0/0            0.0.0.0/0           
    0     0 ACCEPT     all  --  br-667a4e7aaba4 *       0.0.0.0/0            0.0.0.0/0           
    0     0 ACCEPT     all  --  docker0 *       0.0.0.0/0            0.0.0.0/0           
 6366 1476K ACCEPT     all  --  br-5b2e0a919563 *       0.0.0.0/0            0.0.0.0/0           

Chain DOCKER-INTERNAL (1 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain DOCKER-USER (1 references)
 pkts bytes target     prot opt in     out     source               destination         
=== IPTABLES -S ===
-P INPUT ACCEPT
-P FORWARD DROP
-P OUTPUT ACCEPT
-N DOCKER
-N DOCKER-BRIDGE
-N DOCKER-CT
-N DOCKER-FORWARD
-N DOCKER-INTERNAL
-N DOCKER-USER
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.19.0.8/32 ! -i br-5b2e0a919563 -o br-5b2e0a919563 -p tcp -m tcp --dport 7171 -j ACCEPT
-A DOCKER -d 172.19.0.7/32 ! -i br-5b2e0a919563 -o br-5b2e0a919563 -p tcp -m tcp --dport 5055 -j ACCEPT
-A DOCKER -d 172.19.0.6/32 ! -i br-5b2e0a919563 -o br-5b2e0a919563 -p tcp -m tcp --dport 8989 -j ACCEPT
-A DOCKER -d 172.19.0.5/32 ! -i br-5b2e0a919563 -o br-5b2e0a919563 -p tcp -m tcp --dport 7878 -j ACCEPT
-A DOCKER -d 172.19.0.4/32 ! -i br-5b2e0a919563 -o br-5b2e0a919563 -p tcp -m tcp --dport 9705 -j ACCEPT
-A DOCKER -d 172.19.0.3/32 ! -i br-5b2e0a919563 -o br-5b2e0a919563 -p tcp -m tcp --dport 9696 -j ACCEPT
-A DOCKER -d 172.19.0.2/32 ! -i br-5b2e0a919563 -o br-5b2e0a919563 -p tcp -m tcp --dport 6767 -j ACCEPT
-A DOCKER ! -i br-667a4e7aaba4 -o br-667a4e7aaba4 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-5b2e0a919563 -o br-5b2e0a919563 -j DROP
-A DOCKER-BRIDGE -o br-667a4e7aaba4 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-5b2e0a919563 -j DOCKER
-A DOCKER-CT -o br-667a4e7aaba4 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-5b2e0a919563 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-667a4e7aaba4 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-5b2e0a919563 -j ACCEPT
